[tool.poetry]
name = "openai-api-utils"
version = "0.1.0"
description = ""
authors = ["Dexter Jung <dropyourcoffee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
openai = "^1.7.2"
colorama = "^0.4.6"
wheel = "^0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
